Добавлена функциональность запросов и ответов на них